Add delete, create, update endpoints for hive sections (server)
